<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.example.hao.signupform.Main3Activity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main3_text"/>

        <Button
            android:id="@+id/send_button"
            style="@style/button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:text="@string/send_mail"/>

        <Button
            android:id="@+id/restart_button"
            style="@style/button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/send_button"
            android:text="@string/restart"/>

    </RelativeLayout>
</RelativeLayout>
